# jlai

./: .gitignore  README.md  main.py  pixi.toml  pyproject.toml
jlai/embed/tei/: __init__.py  common.py  local.py  remote.py
jlai/infer/sgl/: __init__.py  common.py  local.py  remote.py
jlai/interp/lens/: __init__.py  common.py  local.py  reference.py  remote.py
tests/: test_lens.py  test_sgl.py
