[project]
authors = [{name = "bkj", email = "bkj.322@gmail.com"}]
name = "jlai"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["modal>=1.1.0,<2", "numpy>=1.26,<3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
jlai = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.13.*"
fire = ">=0.7.0,<0.8"

[tool.hatch.build.targets.wheel]
packages = ["jlai"]
